--- a/Shop/Views/Shared/_Login.cshtml
+++ b/Shop/Views/Shared/_Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Businessmall.Application.Queries.ShopUser.UserLogin
+﻿@model Businessmall.Application.Queries.ShopUser.UserLoginQuery
 
 @using (Html.BeginForm("login", "Security", FormMethod.Post, new { id = "form-login" })) {
     <div class="span-4 margin-left-20 first">
