--- a/Shop/Views/Products/ProductLists.cshtml
+++ b/Shop/Views/Products/ProductLists.cshtml
@@ -1,1 +1,27 @@
-﻿
+﻿@model List<Businessmall.Application.QueryResults.Products.AvailableProduct>
+
+<table class="table" id="products-list-table">
+    @if (Model.Count <= 0) { 
+            <tr> No products available</tr>
+    }else{
+        <thead>
+            <tr>
+                <th>Product Name</th>
+                <th>Price</th>
+                <th>Available Quantity</th>
+            </tr>
+        </thead>
+    }
+    @foreach (var product in Model) { 
+        <tr>
+            <td>@product.name</td>
+            <td>@product.price</td>
+            <td>@product.availableQty</td>
+            <td>
+                <a href="">
+                   Order
+                </a>
+            </td>
+        </tr>
+    }
+</table>
