Added new CommandResult Handler and dispatcher. Added placing order in shop

--- a/Shop/Views/Products/ProductLists.cshtml
+++ b/Shop/Views/Products/ProductLists.cshtml
@@ -18,10 +18,10 @@
             <td>@product.price</td>
             <td>@product.availableQty</td>
             <td>
-                <a href="">
+                <a href="@Url.Action("PlaceOrder", "Order", new {productId = product.id })">
                    Order
                 </a>
             </td>
         </tr>
-    }
+    } 
 </table>
