--- a/Businessmall/Views/Shared/_Layout.cshtml
+++ b/Businessmall/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Users", "Index", "User")</li>
                     <li>@Html.ActionLink("Products", "Index", "Product")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Order")</li>
                 </ul>
             </div>
         </nav>
